--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "scrapping",
+  "name": "CheckMentor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "clear && node index.js",
-    "dev": "nodemon server.js"
+    "build": "tsc",
+    "start": "node dist/app.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "watch": "tsc --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,14 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "puppeteer": "^21.4.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "@types/morgan": "^1.9.7",
+    "@types/node": "^20.8.10",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
