--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -31,8 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
